# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RTree.h  camera.cpp  camera.h  colmap_convert.h  csg.cpp  csg.h  example_cube_rgb.cpp  example_cube_sky.cpp  example_fish_tank.cpp  example_sphere_fog.cpp  example_sphere_rgb.cpp  geometry_util.cpp  geometry_util.h  intersectable.cpp  intersectable.h  intervals.cpp  intervals.h  main.cpp  main_sphere_fog.cpp  mesh.cpp  mesh.h  random_texture.cpp  random_texture.h  ray_slab.h  render.cpp  render.h  rtree_util.cpp  rtree_util.h  scene.cpp  scene.h  test.cpp  test_interval.cpp  texture_test.cpp
devdocker/: build_and_run.sh  download_pkgs.sh
devdocker/docker_build/: Dockerfile  install-clangd-18.sh  install_opencv4.sh
lib/rply/: CMakeLists.txt  ply_read.cpp  ply_read.h
lib/rply/rply/: CMakeLists.txt
